--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primaryGreen">#3D9A7F</color>
     <color name="darkGreen">#205143</color>
+    <color name="grey">#E8E8E8</color>
+    <color name="red">#FF0000</color>
+    <color name="darkBlue">#003D75</color>
+
 
 </resources>
