--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="distance_40">40dp</dimen>
     <dimen name="distance_24">24dp</dimen>
     <dimen name="distance_12">12dp</dimen>
     <dimen name="distance_16">16dp</dimen>
