--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,8 +20,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.titleColor"
         app:headerLayout="@layout/nav_header_home"
+        app:itemIconTint="@color/drawer_item"
+        app:itemTextColor="@color/drawer_item"
         app:menu="@menu/home_drawer_menu" />
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
