--- a/app/src/main/res/layout/fragment_social_assistance_recipient.xml
+++ b/app/src/main/res/layout/fragment_social_assistance_recipient.xml
@@ -5,18 +5,63 @@
     android:layout_height="match_parent"
     android:padding="@dimen/distance_16"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.social_assistance_recipient.SocialAssistanceRecipientFragment">
+    tools:context=".ui.user.social_assistance_recipient.SocialAssistanceRecipientFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textTitleSocialAssistanceRecipient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/interbold"
         android:text="@string/daftar_penerima_bantuan_sosial"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        style="@style/TextTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textTitleSocialAssistanceBPNT"
+        style="@style/TextTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/distance_24"
+        android:fontFamily="@font/interbold"
+        android:text="Bantuan Sosial BPNT"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleSocialAssistanceRecipient" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listSocialAssistanceBPNT"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/distance_16"
+        tools:itemCount="3"
+        tools:listitem="@layout/layout_social_assistance_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleSocialAssistanceBPNT" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textTitleSocialAssistanceJAMKESMAS"
+        style="@style/TextTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/distance_24"
+        android:fontFamily="@font/interbold"
+        android:text="@string/bantuan_sosial_jamkesmas"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listSocialAssistanceBPNT" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listSocialAssistanceJAMKESMAS"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/distance_16"
+        tools:itemCount="3"
+        tools:listitem="@layout/layout_social_assistance_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleSocialAssistanceJAMKESMAS" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
