--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,10 @@
     <color name="primaryGreen">#3D9A7F</color>
     <color name="darkGreen">#205143</color>
     <color name="grey">#E8E8E8</color>
+    <color name="greyDark">#919191</color>
     <color name="red">#FF0000</color>
     <color name="darkBlue">#003D75</color>
+    <color name="blue">#1964A9</color>
 
 
 </resources>
