--- a/app/src/main/res/layout/fragment_dashboard_backwood.xml
+++ b/app/src/main/res/layout/fragment_dashboard_backwood.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="@dimen/distance_16"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.backwood.DashboardBackwoodFragment">
+    tools:context=".ui.backwood.dashboard_backwood.DashboardBackwoodFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textVillageBackwood"
