--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,20 +11,8 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/nav_gallery"-->
-<!--        android:name="com.example.desaa.ui.gallery.GalleryFragment"-->
-<!--        android:label="@string/menu_gallery"-->
-<!--        tools:layout="@layout/fragment_gallery" />-->
-
-<!--    <fragment-->
-<!--        android:id="@+id/nav_slideshow"-->
-<!--        android:name="com.example.desaa.ui.slideshow.SlideshowFragment"-->
-<!--        android:label="@string/menu_slideshow"-->
-<!--        tools:layout="@layout/fragment_slideshow" />-->
     <fragment
         android:id="@+id/nav_village"
-
         android:name="com.example.desaa.ui.user.village_introduction_submission.VillageIntroductionSubmissionFragment"
         android:label="fragment_village_introduction_submission"
         tools:layout="@layout/fragment_village_introduction_submission">
@@ -53,7 +41,16 @@
         android:id="@+id/nav_success_send"
         android:name="com.example.desaa.ui.user.success_send.SuccessSendFragment"
         android:label="fragment_success_send"
-        tools:layout="@layout/fragment_success_send" />
+        tools:layout="@layout/fragment_success_send" >
+        <action
+            android:id="@+id/action_nav_success_send_to_nav_status"
+            app:destination="@id/nav_status"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/nav_home" />
+    </fragment>
     <activity
         android:id="@+id/nav_loginActivity"
         android:name="com.example.desaa.LoginActivity"
